# beam

./: AGENTS.md  Cargo.toml  GEMINI.md  README.md
src/: lib.rs  main.rs
tests/: integration_test.rs
