[package]
name = "beam-gemini"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
futures-util = "0.3.31"
http-body = "1.0.1"
http-body-util = "0.1.3"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tokio-test = "0.4.4"
reqwest = { version = "0.12.5", features = ["stream"] }
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.86"
