[package]
name = "beam"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bytes = "1.10"
futures-util = "0.3"
http-body = "1.0"
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
