[package]
name = "beam"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = "0.8"
bytes = "1.10"
futures-util = "0.3"
headers = "0.4"
http-body = "1.0"
http-body-util = "0.1"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
